made capitalization consistent

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
-Package: Hilary
-Title: What the package does (short line)
+Package: hilary
+Title: Personal R package of Hilary Parker
 Version: 0.1
-Authors@R: "First Last <first.last@example.com> [aut, cre]"
-Description: What the package does (paragraph)
+Authors@R: "Hilary Parker <hilary@etsy.com> [aut, cre]"
+Description: Useful, miscellaneous R functions.
 Depends:
     R (>= 3.0.2)
-License: What license is it under?
+License: GPL-3
+URL: http://hilaryparker.com
 LazyData: true
